# GRoDel-THR-FI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
apps/: CMakeLists.txt  generate-osm.py  harmonicResistanceExperiments.cpp  matrixMarketToNetworkitBinary.cpp
experiments/: eval-case-study.ipynb  eval-exact.ipynb  eval-experiments.ipynb  experiments.yml  forestIndexMain.py  requirements.txt  solveExactForestIndex.py  solveExactHarmonicResistance.py  visfunctions.py
include/harmonicResistance/: DynFullLaplacianInverseSolver.hpp  DynLaplacianInverseSolver.hpp  RobustnessGreedy.hpp  StGreedy.hpp  SubmodularGreedy.hpp
src/: CMakeLists.txt  DynFullLaplacianInverseSolver.cpp  RobustnessGreedy.cpp  StGreedy.cpp
